tabindex fix, rating overflow fix

--- a/src/components/Rating/Rating.css
+++ b/src/components/Rating/Rating.css
@@ -6,32 +6,32 @@ aside {
   margin-bottom: 1em;
 }
 
+.list-container {
+  position: relative;
+  height: 25em;
+}
+
 .participants {
+  position: absolute;
+  top: 0;
+  bottom: 0;
   width: fit-content;
-  max-height: 25em;
   overflow-y: auto;
   padding: 0.5em 2em;
   border: 1px solid var(--accent-color);
   border-radius: 5px;
 }
 
-/* .participants::after {
-  content: "\2B07";
-  position: absolute;
-  right: 5px;
-  bottom: 0;
-} */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   -webkit-appearance: none;
-  width: 7px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: rgba(0, 0, 0, .5);
-  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
-} */
-
+  background-color: var(--accent-color);
+  box-shadow: 0 0 1px rgba(255, 255, 255, 0.7);
+}
 
 .participants li::marker {
   color: var(--accent-color);
